snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.sha256
8b7271a00d8030817378ae0a72270671547a0a8c8ae995faf051782181d33549